--- a/SimpleDungeonCrawler/Assets/_DOCS/TODO.txt
+++ b/SimpleDungeonCrawler/Assets/_DOCS/TODO.txt
@@ -1,3 +1,8 @@
 TODO:
-08/20/2022:  
-    Create the StayTrapDamageDealer Thinggy
+08/21/2022:
+    - Place traps into the level
+    - Create the Enemy concept
+    - Place Enemies in the level
+    - Create The Arena Trigger using the Targeting system.
+    - Create the End Level Trigger using the Targeting system.
+    - Make a branch to change build to Android and implement Mobile controls.
