--- a/SimpleDungeonCrawler/Assets/_DOCS/TODO.txt
+++ b/SimpleDungeonCrawler/Assets/_DOCS/TODO.txt
@@ -1,8 +1,7 @@
 TODO:
 08/21/2022:
-    - Place traps into the level
+    - Create Player Death: Create a PlayerDeathHandler that will inform the GameManager of the players death
     - Create the Enemy concept
     - Place Enemies in the level
-    - Create The Arena Trigger using the Targeting system.
-    - Create the End Level Trigger using the Targeting system.
     - Make a branch to change build to Android and implement Mobile controls.
+    - Fix the GameCredit scene.  I would like it to fade out before cutting to MainMenu
